[package]
name = "actix-web-detached-jws-middleware"
version = "0.1.0"
authors = ["Irek Nigmatullin <nigma143@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
actix-web = { version = "3", default-features = false }
actix-service = "1.0"
detached-jws = "0.2.1"

[dev-dependencies]
openssl = "0.10.32"
actix-rt = "2.0.2"
lazy_static = "1.4.0"

[[example]]
name = "main" # examples/main.rs
